[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/UILayer/LobbyScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/LobbyScreen.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/OdibeeSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="LobbyScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.7818
margin_bottom = 1.78174
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.5
margin_top = -20.0
margin_right = 204.5
margin_bottom = 20.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 250.0
rect_min_size = Vector2( 200, 250 )

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Start the game"

[node name="ConnectionLog" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 240.0
margin_right = 740.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 250 )
custom_fonts/normal_font = SubResource( 1 )
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
